test(sync): cover sessionUuid in pull response
SyncPullServiceTest makes sessionUuid deterministic via a sessionUuidFor
helper, asserts it in the incremental-changes test, and adds a missing-session
case asserting null. SyncIntegrationTest asserts the E2E pull returns the
pushed sessionUuid.